--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -2,7 +2,7 @@ name=API Gateway lambda
 description=API Gateway lambda Giter8 template.
 github_org=octo-org
 __github_org_pkg=$github_org;format="camel,lower"$
-repo_name=$name;format="lower,hypen"$
+repo_name=$name;format="norm"$
 default_branch=master
 environment=prod
 scala_package_name_after_com_org=$repo_name;format="camel"$
