--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -224,5 +224,6 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        gh extension install actions/gh-actions-cache
-        gh actions-cache delete "${GITHUB_SHA}" --confirm
+        echo "TODO: uncomment!!!"
+        # gh extension install actions/gh-actions-cache
+        # gh actions-cache delete "${GITHUB_SHA}" --confirm
