--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,11 +1,9 @@
 name=API Gateway lambda
 description=API Gateway lambda Giter8 template.
 github_org=octo-org
-__github_org_pkg=$github_org;format="camel,lower"$
+github_org_package_name_after_com=$github_org;format="camel,lower"$
 repo_name=$name;format="norm"$
 default_branch=master
 environment=prod
 scala_package_name_after_com_org=$repo_name;format="camel"$
 scala_steward_pr_author=$github_org$-scala-steward[bot]
-__java_version=17
-__sbt_version=1.9.6
