--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,9 +1,7 @@
-name=API Gateway lambda
-description=API Gateway lambda Giter8 template.
+name=API Gateway Lambda
+description=API Gateway triggered Lambda Giter8 template.
 github_org=octo-org
-github_org_package_name_after_com=$github_org;format="camel,lower"$
 repo_name=$name;format="norm"$
 default_branch=master
 environment=prod
-scala_package_name_after_com_org=$repo_name;format="camel"$
 scala_steward_pr_author=$github_org$-scala-steward[bot]
