--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,10 +78,12 @@ jobs:
       uses: actionsflow/setup-act@v1
 
     - name: GitHub workflows check
+      env:
+        ACT_PLATFORM: "ubuntu-latest=catthehacker/ubuntu:act-latest"
       run: |
         cd "${G8_PARAM_REPO_NAME}"
         ls ".github/workflows" | \
-          xargs -n 1 -I ^ act --dryrun --platform "ubuntu-latest=catthehacker/ubuntu:act-latest" -W ".github/workflows/^"
+          xargs -n 1 -I ^ act --dryrun --platform "${ACT_PLATFORM}" -W ".github/workflows/^"
 
   scalafmt-check:
     name: Scalafmt check
