--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,18 +1,20 @@
 pull_request_rules:
 
-- name: Automatically approve Scala Steward PRs
+- name: Automatically approve bot PRs
   conditions: &base_merge_conditions
-  - author=horothesun-scala-steward[bot]
   - status-success=ShellCheck
   - status-success=GitHub workflows check
   - status-success=Scalafmt check
   - status-success=Run tests
   - status-success=Build Docker image
+  - or:
+    - author=horothesun-scala-steward[bot]
+    - author=horothesun-renovate[bot]
   actions:
     review:
       type: APPROVE
 
-- name: Automatically merge Scala Steward PRs
+- name: Automatically merge bot PRs
   conditions:
   - and: *base_merge_conditions
   - and:
