Template: renovate bot mergify support

--- a/src/main/g8/.mergify.yml
+++ b/src/main/g8/.mergify.yml
@@ -1,9 +1,20 @@
 pull_request_rules:
-- name: Automatically merge Scala Steward PRs
-  conditions:
-  - author=$scala_steward_pr_author$
-  - "#approved-reviews-by>=1"
+
+- name: Automatically approve bot PRs
+  conditions: &base_merge_conditions
   - status-success=Build, test and push
+  - or:
+    - author=$scala_steward_pr_author$
+    - author=$renovate_pr_author$
+  actions:
+    review:
+      type: APPROVE
+
+- name: Automatically merge bot PRs
+  conditions:
+  - and: *base_merge_conditions
+  - and:
+    - "#approved-reviews-by>=1"
   actions:
     merge:
       method: squash
