--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -5,3 +5,4 @@ repo_name=$name;format="norm"$
 default_branch=master
 environment=prod
 scala_steward_pr_author=$github_org$-scala-steward[bot]
+renovate_pr_author=$github_org$-renovate[bot]
