--- a/src/main/g8/renovate.json
+++ b/src/main/g8/renovate.json
@@ -1,4 +1,11 @@
 {
   "\$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "enabledManagers": ["dockerfile", "github-actions"]
+  "extends": [
+    "config:recommended",
+    ":disableDependencyDashboard"
+  ],
+  "enabledManagers": [
+    "dockerfile",
+    "github-actions"
+  ]
 }
