--- a/src/main/g8/.scalafmt.conf
+++ b/src/main/g8/.scalafmt.conf
@@ -1,11 +1,8 @@
 version = 3.8.3
-align.preset = more
-maxColumn = 100
 runner.dialect = scala213
-
-rewrite.rules = [
-  RedundantBraces
-]
-project.excludeFilters = [
-  "target"
-]
+align.preset = more
+maxColumn = 120
+rewrite.rules = [ Imports, RedundantBraces ]
+rewrite.imports.sort = scalastyle
+rewrite.imports.groups = [ [".*"] ]
+project.excludeFilters = [ "target" ]
