--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,6 +114,9 @@ jobs:
       with:
         java-version: ${{ env.JAVA_VERSION }}
         distribution: "temurin"
+    - uses: sbt/setup-sbt@v1
+      with:
+        sbt-runner-version: ${{ env.SBT_VERSION }}
 
     - name: Scalafmt check
       run: |
@@ -149,6 +152,9 @@ jobs:
       with:
         java-version: ${{ env.JAVA_VERSION }}
         distribution: "temurin"
+    - uses: sbt/setup-sbt@v1
+      with:
+        sbt-runner-version: ${{ env.SBT_VERSION }}
 
     - name: Run tests
       run: |
