--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - uses: sbt/setup-sbt@v1
+
     - name: Generate project
       run: |
         sbt new file://../api-gateway-lambda-template.g8 \
